Fix display on small devices

--- a/ImageCropper/imageCropper.css
+++ b/ImageCropper/imageCropper.css
@@ -119,6 +119,7 @@
 
 @media screen and (max-width: 799px) {
   #image-cropper-modal .modal-dialog {
+    margin: 10px auto;
     width: 90%;
   }
 }
